--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "string-to-emoji",
+  "name": "string-to-random-emoji",
   "version": "1.0.0",
   "description": "For any given string, get a random emoji.",
   "main": "index.js",
